--- a/report/22072024/22072024/rptSuratTidakButaWarna.jrxml
+++ b/report/22072024/22072024/rptSuratTidakButaWarna.jrxml
@@ -86,15 +86,15 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 		<property name="com.jaspersoft.studio.field.label" value="alamat"/>
 	</field>
 	<detail>
-		<band height="802">
+		<band height="656">
 			<image scaleImage="FillFrame" onErrorType="Blank">
-				<reportElement x="3" y="0" width="550" height="90" uuid="78940533-f02b-42f5-88cc-b2cea81caf26">
-					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+				<reportElement x="20" y="0" width="520" height="118" uuid="78940533-f02b-42f5-88cc-b2cea81caf26">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<imageExpression><![CDATA[$P{logo}]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="12" y="96" width="535" height="21" uuid="b2b4d736-6961-466a-8fe3-5db6fb9b8aeb"/>
+				<reportElement x="12" y="119" width="535" height="21" uuid="b2b4d736-6961-466a-8fe3-5db6fb9b8aeb"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Tahoma" size="12" isBold="true" isUnderline="true"/>
 					<paragraph lineSpacing="Single"/>
@@ -102,7 +102,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<text><![CDATA[SURAT KETERANGAN BUTA WARNA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="20" y="150" width="505" height="30" uuid="371a1fac-860e-479a-a361-68f694faeee9">
+				<reportElement x="20" y="173" width="505" height="30" uuid="371a1fac-860e-479a-a361-68f694faeee9">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 				</reportElement>
@@ -113,7 +113,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<text><![CDATA[Yang bertanda tangan di bawah ini Dokter RS Islam PKU Muhammadiyah Palangka Raya menerangkan bahwa pasien : ]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="44" y="192" width="130" height="15" uuid="8a671420-0d7f-417e-b0f5-5bf5dbbd5e99">
+				<reportElement x="44" y="215" width="130" height="15" uuid="8a671420-0d7f-417e-b0f5-5bf5dbbd5e99">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 				</reportElement>
@@ -124,7 +124,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<text><![CDATA[Nama]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="174" y="192" width="5" height="15" uuid="a2f2aa24-24b5-4032-94d7-77b1bbb64b94">
+				<reportElement x="174" y="215" width="5" height="15" uuid="a2f2aa24-24b5-4032-94d7-77b1bbb64b94">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
@@ -135,7 +135,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<text><![CDATA[:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="179" y="192" width="370" height="15" uuid="f6a3a131-73e7-4a55-9a5e-37266277fbc2">
+				<reportElement x="179" y="215" width="370" height="15" uuid="f6a3a131-73e7-4a55-9a5e-37266277fbc2">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement verticalAlignment="Middle">
@@ -145,7 +145,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<textFieldExpression><![CDATA[$F{nm_pasien}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="44" y="256" width="130" height="15" uuid="6e390cbe-4684-442b-b926-923227854857">
+				<reportElement x="44" y="279" width="130" height="15" uuid="6e390cbe-4684-442b-b926-923227854857">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 				</reportElement>
@@ -156,7 +156,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<text><![CDATA[Alamat]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="174" y="234" width="5" height="15" uuid="dcdca215-aa87-4ae8-9877-8cdf6bfbb726">
+				<reportElement x="174" y="257" width="5" height="15" uuid="dcdca215-aa87-4ae8-9877-8cdf6bfbb726">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
@@ -167,7 +167,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<text><![CDATA[:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="179" y="256" width="370" height="39" uuid="35c4ec86-3828-478a-926c-0991bf9f3aab">
+				<reportElement x="179" y="279" width="370" height="39" uuid="35c4ec86-3828-478a-926c-0991bf9f3aab">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement verticalAlignment="Top">
@@ -177,7 +177,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<textFieldExpression><![CDATA[$F{alamat}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="180" y="323" width="369" height="15" uuid="433749d1-f4d1-4a75-be0b-7e60041e40ee">
+				<reportElement x="180" y="346" width="369" height="15" uuid="433749d1-f4d1-4a75-be0b-7e60041e40ee">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 				</reportElement>
@@ -188,7 +188,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<textFieldExpression><![CDATA[$F{hasilperiksa}]]></textFieldExpression>
 			</textField>
 			<textField pattern="" isBlankWhenNull="true">
-				<reportElement x="274" y="440" width="274" height="15" uuid="85bcac56-a364-4b88-97e6-724ae9b94c28">
+				<reportElement x="274" y="463" width="274" height="15" uuid="85bcac56-a364-4b88-97e6-724ae9b94c28">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
@@ -198,7 +198,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<textFieldExpression><![CDATA[$P{kotars}+", "+$F{tanggalperiksa}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="44" y="214" width="130" height="15" uuid="a7cc503b-b84b-4774-8d00-43b5de3152e3">
+				<reportElement x="44" y="237" width="130" height="15" uuid="a7cc503b-b84b-4774-8d00-43b5de3152e3">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 				</reportElement>
@@ -209,7 +209,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<text><![CDATA[Tempat, Tanggal Lahir]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="174" y="214" width="5" height="15" uuid="17957d31-0c3c-4227-b7bb-06e5bf450fb7">
+				<reportElement x="174" y="237" width="5" height="15" uuid="17957d31-0c3c-4227-b7bb-06e5bf450fb7">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
@@ -220,7 +220,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<text><![CDATA[:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="44" y="234" width="130" height="15" uuid="cb5113f9-e65a-444f-bad7-665ad55a3b72">
+				<reportElement x="44" y="257" width="130" height="15" uuid="cb5113f9-e65a-444f-bad7-665ad55a3b72">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 				</reportElement>
@@ -231,7 +231,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<text><![CDATA[Jenis Kelamin]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="174" y="256" width="5" height="15" uuid="d3ff1db3-c041-4f6f-a24b-80a092b61cb1">
+				<reportElement x="174" y="279" width="5" height="15" uuid="d3ff1db3-c041-4f6f-a24b-80a092b61cb1">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
@@ -242,7 +242,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<text><![CDATA[:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="179" y="214" width="370" height="15" uuid="d761a3dc-bafd-4365-8db2-d7d45a541da8">
+				<reportElement x="179" y="237" width="370" height="15" uuid="d761a3dc-bafd-4365-8db2-d7d45a541da8">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement verticalAlignment="Middle">
@@ -252,7 +252,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<textFieldExpression><![CDATA[$F{tmp_lahir}+", "+$F{tgl_lahir}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="179" y="234" width="370" height="15" uuid="5171f36c-0c33-45bc-990e-cad0cd7ed83d">
+				<reportElement x="179" y="257" width="370" height="15" uuid="5171f36c-0c33-45bc-990e-cad0cd7ed83d">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement verticalAlignment="Middle">
@@ -262,7 +262,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<textFieldExpression><![CDATA[$F{jk}.equals("L")? "Laki-Laki":"Perempuan"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="274" y="559" width="274" height="15" uuid="41e74ff0-e94b-4028-9444-4aaf40e2692f">
+				<reportElement x="274" y="582" width="274" height="15" uuid="41e74ff0-e94b-4028-9444-4aaf40e2692f">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
@@ -271,7 +271,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<textFieldExpression><![CDATA["(     "+$F{nm_dokter}+"     )"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="12" y="117" width="535" height="15" uuid="554f8cf1-7b4d-43ca-bbe7-7f962974b9e6">
+				<reportElement x="12" y="140" width="535" height="15" uuid="554f8cf1-7b4d-43ca-bbe7-7f962974b9e6">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
@@ -281,7 +281,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<textFieldExpression><![CDATA["Nomor : "+$F{no_surat}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="44" y="296" width="130" height="15" uuid="b4be6da2-5c5b-4964-a0aa-f9e964459791">
+				<reportElement x="44" y="319" width="130" height="15" uuid="b4be6da2-5c5b-4964-a0aa-f9e964459791">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 				</reportElement>
@@ -292,7 +292,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<text><![CDATA[Pekerjaan]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="174" y="296" width="5" height="15" uuid="9e7b43bf-e8e3-4c20-a275-d1e36431d6e7">
+				<reportElement x="174" y="319" width="5" height="15" uuid="9e7b43bf-e8e3-4c20-a275-d1e36431d6e7">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
@@ -303,7 +303,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<text><![CDATA[:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="179" y="296" width="370" height="15" uuid="62b5994a-3921-4ad4-857a-b456974278dc">
+				<reportElement x="179" y="319" width="370" height="15" uuid="62b5994a-3921-4ad4-857a-b456974278dc">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement verticalAlignment="Middle">
@@ -313,7 +313,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<textFieldExpression><![CDATA[$F{pekerjaan}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="20" y="356" width="504" height="15" uuid="02cdbb1e-f55f-4649-aede-4f0249266ca0">
+				<reportElement x="20" y="379" width="504" height="15" uuid="02cdbb1e-f55f-4649-aede-4f0249266ca0">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 				</reportElement>
@@ -324,7 +324,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<text><![CDATA[Demikian Surat Keterangan ini dibuat untuk dipergunakan sebagaimana mestinya.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="274" y="458" width="274" height="15" uuid="95beccec-5c33-46f8-8d6a-6f7fbb700c5b">
+				<reportElement x="274" y="481" width="274" height="15" uuid="95beccec-5c33-46f8-8d6a-6f7fbb700c5b">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
@@ -336,7 +336,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<text><![CDATA[Dokter Pemeriksa]]></text>
 			</staticText>
 			<componentElement>
-				<reportElement x="520" y="600" width="5" height="10" isRemoveLineWhenBlank="true" forecolor="#FFFFFF" uuid="bcce4461-dbda-43fd-8846-20328e2ab72d">
+				<reportElement x="520" y="623" width="5" height="10" isRemoveLineWhenBlank="true" forecolor="#FFFFFF" uuid="bcce4461-dbda-43fd-8846-20328e2ab72d">
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<jr:QRCode xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" errorCorrectionLevel="H">
@@ -344,7 +344,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				</jr:QRCode>
 			</componentElement>
 			<staticText>
-				<reportElement x="44" y="323" width="130" height="15" uuid="567f6757-1f7f-4052-b6e7-ffbfa73ce287">
+				<reportElement x="44" y="346" width="130" height="15" uuid="567f6757-1f7f-4052-b6e7-ffbfa73ce287">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 				</reportElement>
@@ -355,7 +355,7 @@ pasien.kd_kec=kecamatan.kd_kec and pasien.kd_kab=kabupaten.kd_kab and reg_periks
 				<text><![CDATA[Dinyatakan]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="175" y="322" width="5" height="15" uuid="f6bbc5b8-e0a9-46bd-be41-a886273bd1c1">
+				<reportElement x="175" y="345" width="5" height="15" uuid="f6bbc5b8-e0a9-46bd-be41-a886273bd1c1">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
