--- a/src/simrskhanza/src22072024/DlgPasienMati.form
+++ b/src/simrskhanza/src22072024/DlgPasienMati.form
@@ -494,7 +494,7 @@
                 </Component>
                 <Component class="widget.Label" name="jLabel9">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="Keterangan :"/>
+                    <Property name="text" type="java.lang.String" value="Ket./No.Srt :"/>
                     <Property name="name" type="java.lang.String" value="jLabel9" noResource="true"/>
                   </Properties>
                   <Constraints>
@@ -541,7 +541,7 @@
                     </Property>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                       <StringArray count="1">
-                        <StringItem index="0" value="21-07-2024"/>
+                        <StringItem index="0" value="07-08-2024"/>
                       </StringArray>
                     </Property>
                     <Property name="displayFormat" type="java.lang.String" value="dd-MM-yyyy"/>
