--- a/report/22072024/22072024/rptSuratKeteranganSehat.jrxml
+++ b/report/22072024/22072024/rptSuratKeteranganSehat.jrxml
@@ -100,18 +100,18 @@
 				<text><![CDATA[Alamat]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="153" y="231" width="7" height="12" uuid="95bb336e-d0b2-4a47-a8f6-a42ae73672d5"/>
+				<reportElement positionType="Float" x="153" y="236" width="17" height="12" uuid="95bb336e-d0b2-4a47-a8f6-a42ae73672d5"/>
 				<textElement>
 					<font fontName="Tahoma" size="9"/>
 					<paragraph lineSpacing="Single"/>
 				</textElement>
 				<text><![CDATA[:]]></text>
 			</staticText>
-			<textField>
-				<reportElement x="164" y="212" width="381" height="17" uuid="89b6abac-6362-4f30-9d81-10e8999c9179">
+			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
+				<reportElement positionType="Float" x="164" y="213" width="381" height="17" uuid="89b6abac-6362-4f30-9d81-10e8999c9179">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
-				<textElement verticalAlignment="Middle">
+				<textElement verticalAlignment="Middle" markup="none">
 					<font fontName="Tahoma" size="12"/>
 					<paragraph lineSpacing="Single"/>
 				</textElement>
@@ -126,7 +126,7 @@
 				<textFieldExpression><![CDATA[$P{kotars}+", "+$F{tanggalsurat}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="28" y="229" width="123" height="15" uuid="e7a763f5-1de3-41fe-974c-0107cc3ebaa3"/>
+				<reportElement positionType="Float" x="28" y="234" width="152" height="15" uuid="e7a763f5-1de3-41fe-974c-0107cc3ebaa3"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Tahoma" size="12" isBold="false"/>
 					<paragraph lineSpacing="Single"/>
@@ -134,7 +134,7 @@
 				<text><![CDATA[Tempat, Tanggal Lahir]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="153" y="214" width="7" height="12" uuid="70431317-57a7-4c0f-bdbe-e745622ae40b"/>
+				<reportElement positionType="Float" x="153" y="214" width="7" height="12" uuid="70431317-57a7-4c0f-bdbe-e745622ae40b"/>
 				<textElement>
 					<font fontName="Tahoma" size="9"/>
 					<paragraph lineSpacing="Single"/>
@@ -142,7 +142,7 @@
 				<text><![CDATA[:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="28" y="245" width="83" height="16" uuid="ad396c2b-2cce-4c42-88ef-4f2b946a9864"/>
+				<reportElement positionType="Float" x="28" y="250" width="162" height="16" uuid="ad396c2b-2cce-4c42-88ef-4f2b946a9864"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Tahoma" size="12" isBold="false"/>
 					<paragraph lineSpacing="Single"/>
@@ -150,7 +150,7 @@
 				<text><![CDATA[Jenis Kelamin]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="28" y="282" width="83" height="18" uuid="891f5529-77ee-4503-9f21-85a9b2bb4892">
+				<reportElement positionType="Float" x="28" y="287" width="172" height="18" uuid="891f5529-77ee-4503-9f21-85a9b2bb4892">
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 				</reportElement>
 				<textElement verticalAlignment="Middle">
@@ -160,7 +160,7 @@
 				<text><![CDATA[Berat Badan]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="28" y="299" width="83" height="19" uuid="01355c9c-b073-4d71-860d-bb17792d964e"/>
+				<reportElement positionType="Float" x="28" y="304" width="152" height="19" uuid="01355c9c-b073-4d71-860d-bb17792d964e"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Tahoma" size="12"/>
 					<paragraph lineSpacing="Single"/>
@@ -168,7 +168,7 @@
 				<text><![CDATA[Tinggi Badan]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="28" y="317" width="83" height="22" uuid="3ebe8644-fbf5-48cd-a292-1e1290604b5c"/>
+				<reportElement positionType="Float" x="28" y="322" width="152" height="22" uuid="3ebe8644-fbf5-48cd-a292-1e1290604b5c"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Tahoma" size="12"/>
 					<paragraph lineSpacing="Single"/>
@@ -176,7 +176,7 @@
 				<text><![CDATA[Tekanan Darah]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="153" y="284" width="7" height="12" uuid="09e16230-dc2e-49c7-a104-928ec4f4d555">
+				<reportElement positionType="Float" x="153" y="289" width="17" height="12" uuid="09e16230-dc2e-49c7-a104-928ec4f4d555">
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
@@ -187,7 +187,7 @@
 				<text><![CDATA[:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="153" y="246" width="7" height="12" uuid="e16ca2ee-2b8c-4f1d-aa1b-298e792fe6f0"/>
+				<reportElement positionType="Float" x="153" y="251" width="27" height="12" uuid="e16ca2ee-2b8c-4f1d-aa1b-298e792fe6f0"/>
 				<textElement>
 					<font fontName="Tahoma" size="9"/>
 					<paragraph lineSpacing="Single"/>
@@ -195,7 +195,7 @@
 				<text><![CDATA[:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="153" y="263" width="7" height="12" uuid="be9730da-92ae-4522-8f19-5d86315c343e"/>
+				<reportElement positionType="Float" x="153" y="270" width="27" height="12" uuid="be9730da-92ae-4522-8f19-5d86315c343e"/>
 				<textElement>
 					<font fontName="Tahoma" size="9"/>
 					<paragraph lineSpacing="Single"/>
@@ -203,7 +203,7 @@
 				<text><![CDATA[:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="153" y="302" width="7" height="12" uuid="2ff6744d-247e-41bc-b199-4646d193fadd">
+				<reportElement positionType="Float" x="153" y="307" width="17" height="12" uuid="2ff6744d-247e-41bc-b199-4646d193fadd">
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
@@ -214,7 +214,7 @@
 				<text><![CDATA[:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="153" y="321" width="7" height="12" uuid="310f457d-0e9b-4ff3-9ae3-be7d7a246017">
+				<reportElement positionType="Float" x="153" y="326" width="17" height="12" uuid="310f457d-0e9b-4ff3-9ae3-be7d7a246017">
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
@@ -225,7 +225,7 @@
 				<text><![CDATA[:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="153" y="197" width="7" height="12" uuid="ffe9ebcf-3ec4-484d-9dc5-8e1011f09924"/>
+				<reportElement positionType="Float" x="153" y="197" width="7" height="12" uuid="ffe9ebcf-3ec4-484d-9dc5-8e1011f09924"/>
 				<textElement>
 					<font fontName="Tahoma" size="9"/>
 					<paragraph lineSpacing="Single"/>
@@ -233,7 +233,7 @@
 				<text><![CDATA[:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="272" y="282" width="21" height="17" forecolor="#FFFFFF" uuid="94267a46-04ac-40d6-8030-08401ade4dba">
+				<reportElement positionType="Float" x="272" y="287" width="21" height="17" forecolor="#FFFFFF" uuid="94267a46-04ac-40d6-8030-08401ade4dba">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement verticalAlignment="Middle">
@@ -243,7 +243,7 @@
 				<text><![CDATA[kg]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="272" y="318" width="40" height="17" forecolor="#FFFFFF" uuid="13735a14-061b-4e96-bdc3-c9d09878e66f">
+				<reportElement positionType="Float" x="272" y="323" width="40" height="17" forecolor="#FFFFFF" uuid="13735a14-061b-4e96-bdc3-c9d09878e66f">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement verticalAlignment="Middle">
@@ -253,7 +253,7 @@
 				<text><![CDATA[mmHg]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="272" y="300" width="21" height="17" forecolor="#FFFFFF" uuid="f106c2c1-0f66-4476-ba48-1e10d1de6f9a">
+				<reportElement positionType="Float" x="272" y="305" width="21" height="17" forecolor="#FFFFFF" uuid="f106c2c1-0f66-4476-ba48-1e10d1de6f9a">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement verticalAlignment="Middle">
@@ -262,8 +262,8 @@
 				</textElement>
 				<text><![CDATA[cm]]></text>
 			</staticText>
-			<textField>
-				<reportElement x="164" y="245" width="294" height="17" uuid="7d41c2b6-e4fa-4f90-8625-cc7cf3538148">
+			<textField isStretchWithOverflow="true">
+				<reportElement positionType="Float" x="164" y="250" width="294" height="17" uuid="7d41c2b6-e4fa-4f90-8625-cc7cf3538148">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement verticalAlignment="Middle">
@@ -273,7 +273,7 @@
 				<textFieldExpression><![CDATA[$F{jk}.equals("L")? "Laki-Laki":"Perempuan"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="164" y="282" width="96" height="17" uuid="78c7a862-c235-40e5-8e4f-32e49bac022c">
+				<reportElement positionType="Float" x="164" y="287" width="96" height="17" uuid="78c7a862-c235-40e5-8e4f-32e49bac022c">
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
@@ -284,7 +284,7 @@
 				<textFieldExpression><![CDATA[$F{berat}+" kg"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="164" y="318" width="96" height="17" uuid="ff11e028-0cac-4107-8a2a-370b60bfaf42">
+				<reportElement positionType="Float" x="164" y="323" width="96" height="17" uuid="ff11e028-0cac-4107-8a2a-370b60bfaf42">
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
@@ -295,7 +295,7 @@
 				<textFieldExpression><![CDATA[$F{tensi}+" mmHg"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="164" y="300" width="96" height="17" uuid="49755088-1fda-4fb1-9a41-2ac3a4f46c33">
+				<reportElement positionType="Float" x="164" y="305" width="96" height="17" uuid="49755088-1fda-4fb1-9a41-2ac3a4f46c33">
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
@@ -347,7 +347,7 @@
 				<imageExpression><![CDATA[$P{logo}]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="28" y="262" width="83" height="16" uuid="d6396173-b533-486c-8984-3554104a3cd2"/>
+				<reportElement positionType="Float" x="28" y="269" width="171" height="16" uuid="d6396173-b533-486c-8984-3554104a3cd2"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Tahoma" size="12" isBold="false"/>
 					<paragraph lineSpacing="Single"/>
@@ -407,8 +407,8 @@
 				</textElement>
 				<textFieldExpression><![CDATA["Nomor : "+$F{no_surat}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement positionType="Float" x="164" y="227" width="146" height="17" uuid="732e8cfa-a0a1-4542-a607-2b8a0842cd1a">
+			<textField isStretchWithOverflow="true">
+				<reportElement positionType="Float" x="164" y="232" width="146" height="17" uuid="732e8cfa-a0a1-4542-a607-2b8a0842cd1a">
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
@@ -419,7 +419,7 @@
 				<textFieldExpression><![CDATA[$F{tmp_lahir}+", "]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="164" y="261" width="378" height="17" uuid="121d6f6f-4d52-4fc2-aeec-265ae20baea6">
+				<reportElement positionType="Float" x="164" y="268" width="378" height="17" uuid="121d6f6f-4d52-4fc2-aeec-265ae20baea6">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement verticalAlignment="Middle">
@@ -440,7 +440,7 @@
 				<textFieldExpression><![CDATA[$F{namakeluarga}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="dd MMMMM yyyy">
-				<reportElement positionType="Float" x="290" y="227" width="146" height="17" uuid="e55dd38b-4500-441f-a4db-5b25f067397c">
+				<reportElement positionType="Float" x="290" y="232" width="146" height="17" uuid="e55dd38b-4500-441f-a4db-5b25f067397c">
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
